--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,3 +9,5 @@ spring.jpa.hibernate.ddl-auto = update
 
 spring.security.user.name=maitrayee
 spring.security.user.password=password
+server.port=8081
+
